--- a/public/bower.json
+++ b/public/bower.json
@@ -7,7 +7,8 @@
     "angular-animate": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-bootstrap": "~0.13.4",
-    "angular-input-masks": "^2.3.0"
+    "angular-input-masks": "^2.3.0",
+    "ngMask": "angular-mask#^3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
