--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "connect-busboy": "0.0.2",
     "eventemitter2": "^0.4.14",
     "express": "^4.13.4",
+    "json2xls": "^0.1.2",
     "mongoose": "^4.4.1",
     "node": "0.0.0",
     "socket.io": "^1.4.5"
