--- a/public/bower.json
+++ b/public/bower.json
@@ -8,7 +8,8 @@
     "angular-route": "^1.3.0",
     "angular-bootstrap": "~0.13.4",
     "angular-input-masks": "^2.3.0",
-    "ngMask": "angular-mask#^3.1.1"
+    "ngMask": "angular-mask#^3.1.1",
+    "angular-md5": "^0.1.10"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
