--- a/public/bower.json
+++ b/public/bower.json
@@ -9,7 +9,8 @@
     "angular-bootstrap": "~0.13.4",
     "angular-input-masks": "^2.3.0",
     "ngMask": "angular-mask#^3.1.1",
-    "angular-md5": "^0.1.10"
+    "angular-md5": "^0.1.10",
+    "json-export-excel": "ng-json-export-excel#^1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
